--- a/src/pages/NavigationBar/DataDownloader/DataDownloader.module.css
+++ b/src/pages/NavigationBar/DataDownloader/DataDownloader.module.css
@@ -2,19 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .download_container {
-  width: 1200px;
   max-width: 1200px;
   height: 100%;
-  position: relative;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 10px 20px 20px;
+  margin-bottom: 30px;
 }
 
 .titles {
